--- a/templates/img_gif.jade
+++ b/templates/img_gif.jade
@@ -1,9 +1,8 @@
 //- img_gif.jade
-<!-- --filename = "../templates/head.jade" -->
-
 
 block div
-  h1 #{title}
-  video(poster=poster_url, preload="auto", autoplay="autoplay", mute="muted", loop="loop")
-    source(src=mp4_url type="video/mp4")
-    source(src=webm_url type="video/webm")
+  h1
+    a(href=reddit_url + permalink) #{title}
+  video(poster=url preload="auto", autoplay="autoplay", mute="muted", loop="loop")
+    source(src=mp4 type="video/mp4")
+    source(src=webm type="video/webm")
