better media generalization

--- a/templates/img_gif.jade
+++ b/templates/img_gif.jade
@@ -3,6 +3,6 @@
 block div
   h1
     a(href=reddit_url + permalink) #{title}
-  video(poster=url preload="auto", autoplay="autoplay", mute="muted", loop="loop")
-    source(src=mp4 type="video/mp4")
-    source(src=webm type="video/webm")
+  video(poster=media[0].poster_url preload="auto", autoplay="autoplay", mute="muted", loop="loop")
+    source(src=media[0].mp4 type="video/mp4")
+    source(src=media[0].webm type="video/webm")
