a bunch of template changes..:

--- a/templates/processing.jade
+++ b/templates/processing.jade
@@ -1,3 +1,6 @@
-div
-  p Thread preview is still being generated
+extends default_header
+
+block content
+  div
+    p Thread preview is still being generated
   
