--- a/templates/unsupported.jade
+++ b/templates/unsupported.jade
@@ -1,2 +1,4 @@
-block div
-  p Post type <b>#{type}</b> is not currently supported
+extends default_header
+block content
+  block div
+    p Post type <b>#{type}</b> is not currently supported
