--- a/templates/head.jade
+++ b/templates/head.jade
@@ -1,5 +1,6 @@
-//- head.jade
-doctype html
-html
-  body
-    block content
+head
+  title Reddit Previewer
+  link(rel='stylesheet', type='style/css' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css')
+  link(rel='stylesheet', type='style/css' href='https://fonts.googleapis.com/css?family=Indie+Flower|Inconsolata|Anonymous+Pro')
+  style(rel='css/stylesheet'): include css/main.css
+  script(rel='/text/javascript'): include js/main.js
