--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -6,6 +6,42 @@ a {
   text-decoration: none;
 }
 
+
+a.green:link{color: #2ECC71;}
+a.green:visited {color: #2ECC71;}
+a.green:hover {color: #2ECC71;}
+a.green:active {color: #2ECC71;}
+
+a.belize:link {color: #2980B9}
+a.belize:visited {color: #2980B9}
+a.belize:hover {color: #2980B9}
+a.belize:active {color: #2980B9}
+
+a.river:link {color: #3498db}
+a.river:visited {color: #3498db}
+a.river:hover {color: #3498db}
+a.river:active {color: #3498db}
+
+.recent {
+  margin-top: 2em;
+  width: 80%;
+  float: right;
+}
+
+.recent .post {
+  margin-bottom: .75em;
+}
+
+.recent .post .title {
+  margin-right: .5em;
+  margin-left: .5em;
+}
+.recent .post .subreddit {
+  margin-right: .5em;
+  margin-left: .5em;
+  font-weight: bold;
+}
+
 .main {
   margin-top: 2em;
   width: 50%;
@@ -48,10 +84,27 @@ a {
 
 .main .post-title {
   text-align: center;
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
 .main .post-reddit {
   margin-top: 1em;
+  text-align: center;
+  font-weight: bold;
+}
+
+button {
+  color: #2ECC71;
+  margin-left: 3vw;
+  margin-right: 3vw;
+  margin-top: .1em;
+  padding-bottom: 5px;
+  border: none;
+  background: none;
+  padding: 0
+}
+
+.navigate {
+  /*width: 100%;*/
   text-align: center;
 }
