funny little mouse thing

--- a/templates/layout_preview.jade
+++ b/templates/layout_preview.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   include head
-  body(onmousemove="window.displayNavigation()")
+  body(onclick='window.clickBack()' onmousemove='window.displayNavigation()')
     div.main
       include header
       div.media-container
