added clickback functionality to prcessing"

--- a/templates/processing.jade
+++ b/templates/processing.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   include head
+  body(onclick='window.clickBack()' onmousemove='window.displayNavigation()')
   div.main
     include header
     div.processing
