--- a/templates/unsupported.jade
+++ b/templates/unsupported.jade
@@ -1,4 +1,5 @@
 extends default_header
 block content
+  body(onclick='window.clickBack()' onmousemove='window.displayNavigation()')
   block div
     p Post type <b>#{type}</b> is not currently supported
