some refactor, ga tracking

--- a/templates/home.jade
+++ b/templates/home.jade
@@ -12,3 +12,4 @@ html
           | in
           span.subreddit
             a.belize(href=reddit_url+'/r/'+post.subreddit) /r/#{post.subreddit}
+    include footer  
