--- a/templates/media_viewer_gifv.jade
+++ b/templates/media_viewer_gifv.jade
@@ -1,6 +1,12 @@
-block div
-  h1 #{title}
-  video(poster=poster_url, preload="auto", autoplay="autoplay", mute="muted", loop="loop", style="width:640px; height: 640px;")
-    source(src=mp4_url type="video/mp4")
-    source(src=webm_url type="video/webm")
-    
+//- Album template
+script(rel='/text/javascript'): include js/albumController.js
+script(rel='/text/javascript'): include js/MediaViewer.js
+div#media.media
+  each image in media
+    video(class="media-viewer" poster=image.poster_url preload="auto", autoplay="autoplay", mute="muted", loop="loop")
+      source(src=image.mp4 type="video/mp4")
+      source(src=image.webm type="video/webm")
+div.navigate
+  button#prev(onclick='window.mediaViewer.prev()') PREV
+  button#next(onclick='window.mediaViewer.next()') NEXT
+  
