fixes rendering issue with images/gifs

--- a/templates/media_viewer_img_gif.jade
+++ b/templates/media_viewer_img_gif.jade
@@ -1,4 +1,4 @@
 //- Album template
 script(rel='/text/javascript'): include js/albumController.js
 div#media.media
-  img.media-viewer(src=media[0].poster_url)
+  img.displayed.media-viewer(src=media[0].poster_url)
